Bug 128948 - UI Sidebar always indicates shape size in inches
Summary: UI Sidebar always indicates shape size in inches
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
6.4.0.0.beta1+
Hardware: All All
: medium normal
Assignee: Gabor Kelemen (Collabora)
URL:
Whiteboard: target:6.5.0 target:6.4.0.1
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Sidebar-Properties-PositionAndSize
  Show dependency treegraph
 
Reported: 2019-11-22 09:40 UTC by NISZ LibreOffice Team
Modified: 2020-05-20 08:37 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file from Writer (9.55 KB, application/vnd.oasis.opendocument.text)
2019-11-22 09:40 UTC, NISZ LibreOffice Team
Details
Screenshot of the document side by side in Writer 6.3 and 6.4 (85.33 KB, image/png)
2019-11-22 09:41 UTC, NISZ LibreOffice Team
Details
Sidebar when setting cm as measurement unit (78.65 KB, image/png)
2019-11-22 09:41 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2019-11-22 09:40:42 UTC
Created attachment 156029 [details]
Example file from Writer

Attached example document contains a simple shape. Its size is incorrectly reported in the sidebar in inches regardless the measurement unit selected in Writer Options.

Steps to reproduce:
1.	Open attached document in Writer master. It has a rounded rectangle shape about 4.4 inches by 2.4 inches.
2.	Go to Writer Options – General again and set measurement unit to mm, cm or points.

Actual results:
The sidebar displays the shapes size as 4.4 mm/cm/point/inch by 2.4 mm/cm/point/inch.

Expected results:
Correct values in different measurement units.

LibreOffice details:
Version: 6.5.0.0.alpha0+ (x64)
Build ID: 7e09d08807b5ba2fd8b9831557752a415bdad562
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: default; VCL: win; 
Locale: en-US (hu_HU); UI-Language: en-US
Calc: CL

Does not happen in:
Verzió: 6.3.0.4 (x86)
Build az.: 057fc023c990d676a43019934386b85b21a9ee99
CPU szálak: 4; OS: Windows 6.3; Felületmegjelenítés: alapértelmezett; VCL: win; 
Területi beállítások: hu-HU (hu_HU); Felület nyelve: hu-HU
Calc: CL

Bibisected using bibisect-win64-6.4 to:
URL: https://cgit.freedesktop.org/libreoffice/core/commit/?id=594bf9e60a69184fdfaa3b9a0ac4206a2a793576 

author	Caolán McNamara <caolanm@redhat.com>	2019-08-19 13:23:35 +0100
committer	Caolán McNamara <caolanm@redhat.com>	2019-08-19 16:13:18 +0200
summary: use double prime symbol for inch
Comment 1 NISZ LibreOffice Team 2019-11-22 09:41:19 UTC
Created attachment 156030 [details]
Screenshot of the document side by side in Writer 6.3 and 6.4
Comment 2 NISZ LibreOffice Team 2019-11-22 09:41:38 UTC
Created attachment 156031 [details]
Sidebar when setting cm as measurement unit
Comment 3 Gabor Kelemen (Collabora) 2019-11-22 09:46:35 UTC
Proposed patch: https://gerrit.libreoffice.org/83447
Comment 4 Commit Notification 2019-11-22 16:07:39 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/922a8bd4ae026ca33c634023703b551cd465491e

Resolves: tdf#128948 double prime symbol not parsed as inch indicator

It will be available in 6.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2019-11-22 16:55:26 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-4":

https://git.libreoffice.org/core/commit/8c02a13b68f86720a8ade3f796a70cf336046b99

Resolves: tdf#128948 double prime symbol not parsed as inch indicator

It will be available in 6.4.0.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Xisco Faulí 2020-05-20 08:37:23 UTC
This bug is covered by this UItest: https://cgit.freedesktop.org/libreoffice/core/commit/?id=730c50946e088e7a93d9c0809444f74502e1b4b8