tdf#128948 Fix measurement unit conversion in Position and Size sidebar

Inch unit may be indicated by either of two characters, but not at the same time

Change-Id: I9d3e606b5158b4594f94e0f13bdf2f635bc77357